test/files/neg/bug961.check
bug961.scala:11: error: Temp.this.B does not take parameters
  B() match {
   ^
one error found
